# VmpProject

./: .gitignore  README.md  coverage_report.md
VmEngine/: .gitignore  settings.gradle
VmEngine/app/: .gitignore  build.gradle
VmEngine/app/src/main/cpp/: CMakeLists.txt  vmengine.exports.map  zAssestManager.h  zAssetManager.cpp  zAssetManager.h  zByteCodeReader.cpp  zByteCodeReader.h  zElfTakeoverDynsym.cpp  zElfTakeoverDynsym.h  zEmbeddedPayload.cpp  zEmbeddedPayload.h  zFileBytes.cpp  zFileBytes.h  zFunction.cpp  zFunction.h  zFunctionData.cpp  zFunctionData.h  zLinker.cpp  zLinker.h  zLog.cpp  zLog.h  zNativeLib.cpp  zPatchBay.cpp  zPatchBay.h  zPipelineConfig.cpp  zPipelineConfig.h  zSoBinBundle.cpp  zSoBinBundle.h  zSymbolTakeover.cpp  zSymbolTakeover.h  zTypeManager.cpp  zTypeManager.h  zVmEngine.cpp  zVmEngine.h  zVmInitCore.cpp  zVmInitCore.h  zVmInitLifecycle.cpp  zVmOpcodes.cpp  zVmOpcodes.h
VmEngine/gradle/: libs.versions.toml
VmEngine/gradle/wrapper/: gradle-wrapper.properties
VmProtect/: CMakeCache.txt  CMakeLists.txt  build_run.bat  elf.h  main.cpp  vmprotect.policy.example  zElf.cpp  zElf.h  zFunction.cpp  zFunction.h  zFunctionData.cpp  zFunctionData.h  zInst.cpp  zInst.h  zLog.cpp  zLog.h  zSoBinBundle.cpp  zSoBinBundle.h
VmProtect/app/: zMain.cpp
VmProtect/capstone_sdk/: README.txt
VmProtect/docs/: tmp_function_decl_scan.csv  zElfReadFacadeApi.md
VmProtect/modules/base/core/: zBitCodec.cpp  zBitCodec.h  zBytes.cpp  zBytes.h  zChecksum.cpp  zChecksum.h  zCodec.cpp  zCodec.h  zEmbeddedPayloadTail.cpp  zEmbeddedPayloadTail.h  zFile.cpp  zFile.h  zFormat.cpp  zFormat.h  zHash.cpp  zHash.h  zIo.cpp  zIo.h  zLog.cpp  zU64Math.h
VmProtect/modules/elfkit/api/: zElfKit.cpp  zElfKit.h  zElfReadFacade.cpp  zElfReadFacade.h  zPatchbayApi.cpp  zPatchbayApi.h  zPatchbayApiTypes.h
VmProtect/modules/elfkit/core/: zElf.cpp  zElf.h  zElfAbi.h  zElfFile.h  zElfLayout.cpp  zElfSymbols.cpp  zElfTypes.h  zFunction.cpp  zFunction.h  zFunctionAsm.cpp  zFunctionData.cpp  zFunctionData.h  zFunctionDump.cpp  zFunctionFacade.cpp  zFunctionView.cpp  zInst.cpp  zInst.h  zInstArith.cpp  zInstAsm.h  zInstAsmCore.cpp  zInstAsmTranslate.cpp  zInstBranch.cpp  zInstDispatch.h  zInstLogic.cpp  zInstMemory.cpp  zSoBinBundle.cpp  zSoBinBundle.h
VmProtect/modules/elfkit/patchbayModel/: zPatchElf.cpp  zPatchElf.h  zPatchElfHeader.cpp  zPatchElfHeader.h  zPatchElfLayout.cpp  zPatchElfLoader.cpp  zPatchElfLoader.h  zPatchElfModel.cpp  zPatchElfTypes.h  zPatchElfUtils.cpp  zPatchElfUtils.h  zPatchElfValidator.cpp  zPatchElfValidator.h  zPatchElfValidatorBase.cpp  zPatchElfValidatorDynamic.cpp  zPatchElfValidatorSegment.cpp  zPatchElfValidatorSymbol.cpp  zProgramEntry.cpp  zProgramEntry.h  zProgramTable.cpp  zProgramTable.h  zSectionEntry.cpp  zSectionEntry.h  zSectionTable.cpp  zSectionTable.h
VmProtect/modules/foundation/core/: zIoUtils.cpp  zIoUtils.h  zLog.cpp  zLog.h
VmProtect/modules/patchbay/app/: zMain.cpp  zPatchbayEntry.h
VmProtect/modules/patchbay/domain/: zPatchbayAliasTables.cpp  zPatchbayAliasTables.h  zPatchbayDonor.cpp  zPatchbayDonor.h  zPatchbayExport.cpp  zPatchbayExport.h  zPatchbayOrigin.cpp  zPatchbayOrigin.h  zPatchbayPatchApply.cpp  zPatchbayPatchApply.h  zPatchbayRules.cpp  zPatchbayRules.h  zPatchbayTypes.h
VmProtect/modules/patchbay/format/: zPatchbayHash.cpp  zPatchbayHash.h  zPatchbayLayout.cpp  zPatchbayLayout.h
VmProtect/modules/patchbay/foundation/: zPatchbayCrc.cpp  zPatchbayCrc.h  zPatchbayIo.cpp  zPatchbayIo.h
VmProtect/modules/pipeline/core/: zPipelineCli.cpp  zPipelineCli.h  zPipelineCoverage.cpp  zPipelineCoverage.h  zPipelineExport.cpp  zPipelineExport.h  zPipelinePatch.cpp  zPipelinePatch.h  zPipelineRun.cpp  zPipelineRun.h  zPipelineTypes.cpp  zPipelineTypes.h
VmProtect/patchbay_tool/: main.cpp  patchbay_entry.h  zElf.cpp  zElf.h  zElfHeader.cpp  zElfInject.h  zElfPcRelativePatcher.cpp  zElfPcRelativePatcher.h  zElfProgramHeaderTable.cpp  zElfSectionHeaderTable.cpp  zElfUtils.cpp  zElfUtils.h  zElfValidator.cpp  zElfValidator.h  zLog.cpp  zLog.h  zSectionTableElement.cpp
demo/: .gitignore  settings.gradle
demo/app/: .gitignore  build.gradle
demo/app/src/main/cpp/: CMakeLists.txt  demo.h  native-lib-ref.cpp  native-lib.cpp  vmp-bridge.cpp  zVmpBridge.cpp
demo/gradle/wrapper/: gradle-wrapper.properties
docs/: _code_files_scope.txt  api_core_exports.md  api_export_inventory.md  architecture_refactor_plan.md  readability_audit.md  中文注释推进计划.md
shared/patchbay/: zPatchbayProtocol.h
tools/: README.md  check_comment_coverage.py  clean.py  embed_expand_into_vmengine.py  gen_takeover_stubs.py  run_delivery_check.py  run_demo_vmp_verify.py  run_install_start_regression.py  run_regression.py  takeover_symbols.json  tmp_function_decl_scan.csv  tmp_function_decl_with_class.csv
tools/_common/: __init__.py  env_utils.py
tools/tmp/: AndroidManifest.xml  classes2.dex  classes3.dex  classes4.dex  resources.arsc
tools/tmp/assets/: fun_bitmask_branch.txt  fun_branch_call.txt  fun_class_static_member.txt  fun_cpp_make_string.txt  fun_cpp_string_len.txt  fun_if_sub.txt  (+2 more)
tools/tmp_vmp_cli2/: branch_addr_list.txt  coverage_report.md
zElfEditor/: CMakeLists.txt  build_output.txt  build_run.bat  demo1  elf.h  err.txt  out.txt  validate_out.txt  zElf.cpp  zElf.h  zElfAddressRewriter.cpp  zElfAddressRewriter.h  zElfHeader.h  zElfInject.cpp  zElfLoader.cpp  zElfLoader.h  zElfProgramHeaderTable.cpp  zElfProgramHeaderTable.h  zElfReconstruction.cpp  zElfSectionHeaderTable.cpp  zElfSectionHeaderTable.h  zElfUtils.cpp  zProgramTableElement.cpp  zProgramTableElement.h  zSectionTableElement.h
zElfEditor/capstone_sdk/: README.txt
zElfEditor/demo1_project/: CMakeLists.txt  README_ANDROID.md  build_android.bat  build_android.sh  main.cpp
zElfEditor/demo1_project/build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
zElfEditor/demo2_project/: CMakeLists.txt  build_android.bat  main.cpp
zElfEditor/demo2_project/build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo2
(+221 files in other folders)
